# log_monitor

./: CMakeLists.txt  README.md  build.sh  clean.sh  run_benchmarks.sh  run_tests.sh  write-up for design choices.docx
benchmarks/: benchmark_monitor.cpp
include/: keyword_matcher.h  log_monitor.h
src/: keyword_matcher.cpp  log_generator.cpp  log_monitor.cpp  main.cpp
tests/: test_keyword_matcher.cpp  test_log_monitor.cpp
